renamed plantsInfo collection to seeds
